--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,17 @@
 [build-system]
-requires = ["setuptools>=69", "wheel"]
+requires = ["setuptools>=65,<69", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "agentapi"
+name = "codexapi"
 version = "0.1.1"
 description = "Minimal Python API for running the Codex CLI."
 readme = "README.md"
 requires-python = ">=3.8"
-license = { file = "LICENSE" }
+license = { text = "MIT" }
 keywords = ["codex", "agent", "cli", "openai"]
 classifiers = [
   "Programming Language :: Python :: 3",
-  "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
 ]
 
