--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "codexapi"
-version = "0.1.3"
+version = "0.1.4"
 description = "Minimal Python API for running the Codex CLI."
 readme = "README.md"
 requires-python = ">=3.8"
@@ -16,6 +16,9 @@ classifiers = [
 ]
 
 dependencies = []
+
+[project.scripts]
+codexapi = "codexapi.cli:main"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
