--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "codexapi"
-version = "0.4.0"
+version = "0.5.0"
 description = "Minimal Python API for running the Codex CLI."
 readme = "README.md"
 requires-python = ">=3.8"
@@ -15,7 +15,10 @@ classifiers = [
   "Operating System :: OS Independent",
 ]
 
-dependencies = []
+dependencies = [
+  "PyYAML>=6.0",
+  "tqdm>=4.64",
+]
 
 [project.scripts]
 codexapi = "codexapi.cli:main"
