--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "codexapi"
-version = "0.5.12"
+version = "0.5.13"
 description = "Minimal Python API for running the Codex CLI."
 readme = "README.md"
 requires-python = ">=3.8"
@@ -17,6 +17,7 @@ classifiers = [
 
 dependencies = [
   "PyYAML>=6.0",
+  "gh-task",
   "tqdm>=4.64",
 ]
 
